--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "data"]
 	path = data
-	url = git@github.com:mattt/wwdc-session-transcripts.git
+	url = https://github.com/mattt/wwdc-session-transcripts.git
